--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,10 @@
 }
 
 body {
+    width: 65%;
+    max-width: 800px;
+    margin: auto;
+    padding: 5%;
     background-color: var(--background-color-eggshell);
 }
 
@@ -25,4 +29,8 @@ h5,
 h6 {
     color: var(--primary-color-gray);
     font-family: var(--header-font-family);
+}
+
+h1 {
+    text-align: center;
 }
